--- a/css/modal.css
+++ b/css/modal.css
@@ -17,7 +17,7 @@
 .modal-content {
   margin: 15% auto; /* 위쪽 여백 및 가운데 정렬 */
   padding: 10px; /* 내부 여백 */
-  border: 1px solid #c8ff00; /* 테두리 */
+  border: 1px solid #fffb00; /* 테두리 */
   background-color: aliceblue;
   width: 100%; /* 너비 설정 */
   max-width: 600px; /* 최대 너비 설정 */
