--- a/css/modal.css
+++ b/css/modal.css
@@ -32,7 +32,7 @@
 .close-wrap {
   display: flex;
   justify-content: space-between; /* 공간 분배 */
-  align-items: center; /* 수직 정렬 */
+  align-items: left; /* 수직 정렬 */
   margin-top: 15px; /* 여백 설정 */
 }
 
@@ -60,7 +60,7 @@
   font-size: 15px; /* 폰트 사이즈 설정 */
   color: #666; /* 텍스트 색상 설정 */
   margin-bottom: 15PX;
-  text-align: center;
+  text-align: left;
 }
 
 input[type="checkbox"] {
