--- a/css/review.css
+++ b/css/review.css
@@ -16,8 +16,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
-  gap: 15px; /* 아이템 간격 */
-}
+  }
 
 /* 각 리뷰 아이템 스타일 */
 .review-item {
@@ -201,8 +200,9 @@
 @media (max-width: 360px) {
   .review-item {
     max-width: 100%; /* 1열을 위한 최대 너비 설정 */
-    padding: 10px; /* 패딩 조정 */
-    box-shadow: none; /* 그림자 제거 */
+    /* padding: 10px;  */
+    /* box-shadow: none;  */
+    /* 그림자 제거 */
   }
   .swiper-scrollbar.swiper-scrollbar-horizontal {
     bottom: -30px; /* 중간 정도 위치 */
