3번째 동영상 추가 및 소개, 공지 영역 오류 수정

--- a/css/header.css
+++ b/css/header.css
@@ -25,7 +25,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  /* max-width: 1300px; */
+  max-width: 1300px;
   padding: 0 20px;
   height: 100px;
   margin: 0 auto;
@@ -169,6 +169,7 @@
 .searchMB {
   scale: 0.95;
   display: none;
+  
 }
 .searchMB input {
   display: block;
@@ -178,7 +179,7 @@
   width: 236px;
   width: 1px;
   transform: translate(-271px, -56px);
-
+  
   height: 45px;
   padding: 10px;
   border: none;
@@ -193,7 +194,7 @@
   visibility: visible;
   width: 238px;
 }
-.inputClose {
+.inputClose{
   display: none;
   position: absolute;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -204,7 +205,7 @@
   transition: all 0.3s;
 }
 
-.inputClose.active {
+.inputClose.active{
   display: block;
 }
 
@@ -226,7 +227,7 @@
   margin: 0 auto;
   /* margin-top: 4px; */
 }
-.header-right .loginBt.hidden {
+.header-right .loginBt.hidden{
   display: none;
 }
 
@@ -463,13 +464,13 @@
   /* background-color: beige; */
 }
 
-.side-top::after {
+.side-top::after{
   content: "";
   position: absolute;
   bottom: 0;
   left: 10%;
   width: 80%;
-
+  
   height: 1px;
   background: #333;
 }
@@ -521,7 +522,7 @@
   display: grid;
   grid-template-columns: repeat(3, 3fr);
   justify-items: center;
-  gap: 8px;
+  gap: 13px 0;
 }
 
 .side-top-icons {
@@ -556,7 +557,7 @@
   justify-content: space-around;
 }
 
-.side-bottom {
+.side-bottom{
   width: 100%;
   height: 70%;
   display: flex;
@@ -564,11 +565,11 @@
   align-items: center;
   /* background-color: antiquewhite; */
 }
-.side-bottom-title {
+.side-bottom-title{
   font-weight: bold;
   margin: 13%;
 }
-.side-bottom-menu {
+.side-bottom-menu{
   width: 54%;
   width: 160px;
   display: grid;
@@ -579,12 +580,12 @@
   justify-content: end;
   justify-items: center;
 }
-.side-bottom-menu li {
+.side-bottom-menu li{
   width: 100%;
   max-width: 60px;
 }
 
-.side-bottom-menu li a {
+.side-bottom-menu li a{
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -592,7 +593,7 @@
   word-break: keep-all;
 }
 
-.side-bottom-menu li a img {
+.side-bottom-menu li a img{
   /* width: 60px; */
   width: 100%;
   /* height: 60px; */
@@ -600,13 +601,15 @@
   object-fit: contain;
 }
 
-.side-bottom-menu li a img:nth-child(3) {
+.side-bottom-menu li a img:nth-child(3){
   /* width: 60px; */
   /* scale: 1.6; */
 }
-.side-bottom-menu li a img:first-child {
+.side-bottom-menu li a img:first-child{
   /* scale: 0.9; */
 }
+
+
 
 .searchMB a img {
   width: 23px;
@@ -729,7 +732,7 @@
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     justify-items: center;
-    gap: 8px;
+    gap: 13px 0;
   }
 }
 @media (max-width: 450px) {
@@ -759,16 +762,17 @@
     display: flex;
   }
 
-  .side-top-menu {
+  /* .side-top-menu {
     display: flex;
-    /* grid-template-columns: repeat(2, 2fr); */
+    grid-template-columns: repeat(2, 2fr);
     justify-items: center;
     gap: 9%;
-  }
+  } */
   .side-top-menu {
     display: grid;
     grid-template-columns: repeat(3, 3fr);
     justify-items: center;
+    gap: 13px 0;
   }
 
   .sidemenu-area hr {
@@ -781,7 +785,7 @@
     display: block !important;
   }
 
-  .side-bottom-menu {
+  .side-bottom-menu{
     /* width: 60%; */
     /* height: 70%; */
     display: grid;
@@ -793,7 +797,7 @@
     /* flex-wrap: wrap; */
   }
 
-  .side-bottom-menu li a img {
+  .side-bottom-menu li a img{
     /* width: 60px; */
     width: 100%;
     /* height: 100%; */
@@ -802,7 +806,7 @@
     /* object-fit: cover; */
   }
 
-  .side-bottom-title {
+  .side-bottom-title{
     font-weight: bold;
     margin: 9%;
   }
