--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -5,7 +5,7 @@
   padding: 20px 0;
 }
 
-.container {
+.popular-items-section .container {
   max-width: 1300px;
   margin: 0 auto;
   padding: 0 20px;
