--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -239,6 +239,9 @@
   .product-item >.product-name {
     font-size: 16px;
   }
+  .product-item img{
+    max-height: 210px;
+  }
 }
 /* 480px 이하 */
 @media (max-width: 485px) {
