--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -1,130 +1,198 @@
 @charset "utf-8";
-.detile-page {
+.detail-page {
   width: 100%;
 }
-.detile_container {
+.detail_container {
   max-width: 1300px;
   margin: 0 auto;
   padding: 20px;
 }
-.detile-product-main {
+.detail-top {
+  margin-top: 10%;
+  display: flex;
   margin-bottom: 10%;
+}
+/* 상품이미지 영역 */
+.detail-breadcrumb {
+  font-size: 15px;
+  color: #736e6e;
+  margin-bottom: 10px;
+}
+.detail-product-img {
+  width: 50%;
+}
+.dp-main-image {
+  position: relative;
+  width: 100%;
+}
+
+.dp-main-image img {
+  width: 100%;
+}
+.dp-sub-images {
+  display: flex;
+  padding: 10px 0;
+}
+.dp-sub-images > img {
+  width: calc(25%);
+  cursor: pointer;
+  padding-right: 10px;
+}
+/* 상품정보 top */
+.detail-info {
+  width: 50%;
+  margin-left: 20px;
+}
+.detail-info-top {
+  display: block;
+  position: relative;
+}
+.detail-info-top li {
+  margin-top: 10px;
+}
+.detail-info-top-brand {
+  font-size: 15px;
+  color: #736e6e;
+}
+.detail-info-top h1 {
+  font-size: 40px;
+  margin: 20px 0;
+}
+.detail-info-top-star span {
+  font-size: 15px;
+  color: #736e6e;
+}
+.detail-info-top-star img {
+  width: 150px;
+}
+.detail-info-top-oprice {
+  font-size: 30px;
+  color: #333;
+  font-weight: 500;
+}
+.detail-info-top-oprice > span {
+  font-size: 25px;
+  font-weight: 0;
+  color: #736e6e;
+}
+.detail-info-top-dprice {
+  font-size: 30px;
+  color: #ff2121;
+  font-weight: 700;
+}
+.detail-info-top-dprice > span {
+  font-size: 25px;
+  font-weight: 0;
+}
+.detail-info-top-coupon {
+  width: 100%;
+  margin: 25px 0;
+  cursor: pointer;
+}
+
+
+/* 상품정보 bottom */
+.detail-info-bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.detail-info-line {
+  border-top: 2px solid #ddd;
+  display: flex;
+  padding: 25px;
+  justify-content: space-between;
+  color: #333;
+}
+.detail-info-line > p {
+  font-size: 20px;
+  width: 30%;
+}
+.detail-info-line > span {
+  /* font-size: 25px; */
+  width: 60%;
+  line-height: 1.2;
+  font-size: 18px;
+}
+.detail-btn {
+  margin-top: 50px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.detile-product-main-left {
-  width: 60%;
-}
-.detile-product-main-left img {
+.detail-btn > a {
   width: 100%;
 }
-.detile-breadcrumb {
-  font-size: 14px;
-  color: #999;
-  margin-bottom: 20px;
-  padding-top: 100px;
-}
-
-.detile-product-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.detile-product-brand {
-  font-size: 14px;
-  color: #666;
-  text-align: left;
-  margin-top: 10px;
-}
-
-.detile-product-info {
-  width: 30%;
-  text-align: left;
-  margin-top: 20px;
-  line-height: 20px;
-}
-
-.detile-product-info > h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.detile-product-price {
+.detail-btn > a > button {
+  width: 98%;
   font-size: 20px;
-  margin-bottom: 20px;
-}
-
-.detile-product-old-price {
-  text-decoration: line-through;
-  color: #999;
-  margin-right: 10px;
-  font-weight: 300;
-  font-size: 18px;
-  padding-top: 10px;
-}
-
-.detile-product-new-price {
-  color: #e60000;
-}
-
-.detile-product-shipping-info,
-.detile-product-shipping-cost {
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-.detile-shipping-cost {
-  font-weight: bold;
-  padding-left: 2%;
-}
-.detile-shipping-cost-info {
-  padding-left: 73px;
-}
-
-/* 상품소개/브랜드 */
-.detile-card {
-  width: 100%;
+  padding: 15px;
+  font-weight: 600;
   margin: 0 auto;
-  padding: 80px;
 }
-.detile-tab-content {
-  display: none;
+.detail-btn-cart {
+  background-color: #d9d9d9;
+  border: 1px solid #333;
 }
-.detile-tab-container{
+.detail-btn-buy {
+  background-color: #ffd233;
+  border: 1px solid #8c6d00;
+}
+/* 라인 */
+.detail-tab-content {
+  border-top: 2px solid #ddd;
   display: flex;
+  align-items: center;
+  width: 100%;
+
+}
+
+.detail-tab-container {
+  display: flex;
+  flex-direction: row;
   justify-content: space-around;
 }
-.detile-tab-container.active {
+
+.detail-tab-container.active {
   display: flex;
-
 }
-
-.detile-tab-button {
+.detail-tab-button {
+  font-size: 15px;
   padding: 10px;
   cursor: pointer;
   border: none;
   background-color: #c74c4c00;
+}
+
+/* 상품소개/브랜드 */
+.detail-card {
+  width: 100%;
+  margin: 0 auto;
 
 }
-/* 라인 */
-.detile-tab-content {
-  border-top: 2px solid #ddd;
-  display: flex;
-  align-items: center;
+.detail-tab-content {
+  display: none;
 }
-.detile-tab-content.active {
+
+/* 상품소개/브랜드 */
+.detail-tab-content.active {
   border-top: 2px solid #000;
   width: 50%;
 }
-.detile-tab-content img {
-width: 100%;
+.detail-image-container img {
+  width: 100%;
+
 }
-.detile-image-container img{
+.detail-image-container img {
   padding-top: 100px;
 }
-.detile-image-brand{
-  width: 75%;
+.detail-image-brand{
+    padding-top: 7%;
+    padding-left: 15%;
+}
+.detail-image-brand img {
+  width: 80%;
+
 }
 
 /* 더 보기 */
