--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -48,6 +48,22 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
 }
+
+.product-item-click{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: block;
+  /* background-color: #870000; */
+}
+
+.product-price{
+  font-weight: bold;
+}
+
 .product-item p{
   display: flex;
   flex-direction: column;
