--- a/css/rookie_brand.css
+++ b/css/rookie_brand.css
@@ -87,6 +87,24 @@
   text-align: center;
 }
 
+.overlay-link{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  /* background-color: aquamarine; */
+}
+
+.overlay-more {
+  text-decoration: underline;
+  color: #fff;
+  line-height: 1.7;
+}
+
 .overlay h3 {
   font-weight: bold;
   font-size: 18px;
