--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -52,7 +52,7 @@
 }
 .detail-info-top-brand {
   font-size: 15px;
-  color: #736e6e;
+  color: #666;
 }
 .detail-info-top h1 {
   font-size: 40px;
@@ -60,7 +60,7 @@
 }
 .detail-info-top-star span {
   font-size: 15px;
-  color: #736e6e;
+  color: #666;
 }
 .detail-info-top-star img {
   width: 150px;
@@ -71,9 +71,14 @@
   font-weight: 500;
 }
 .detail-info-top-oprice > span {
-  font-size: 25px;
+  font-size: 23px;
   font-weight: 0;
-  color: #736e6e;
+  color: #666;
+  padding-right: 5px;
+  text-decoration: line-through;
+  text-decoration-thickness: 2px; /* 취소선 두께 */
+  text-decoration-color: #666; /* 취소선 색상 */
+  text-underline-offset: 8px; /* 선과 텍스트 간격 */
 }
 .detail-info-top-dprice {
   font-size: 30px;
