--- a/css/fix-btn.css
+++ b/css/fix-btn.css
@@ -82,11 +82,14 @@
 /* 팝업 공통 스타일 */
 #cartPopup {
   position: fixed;
+  flex-direction: column;
+  align-items: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
-  max-width: 400px;
+  width: 100%;
+  max-width: 450px;
+  max-height: 400px;
   padding: var(--popup-padding);
   background-color: rgba(255, 255, 255, 0.9);
   display: none;
@@ -96,44 +99,91 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
 
-.popup-content {
+/* .popup-content {
   display: flex;
   flex-direction: column;
-  position: relative; /* X 버튼을 위한 상대적 위치 지정 */
-}
+  align-items: center;
+  position: relative;
+  width: 100%;
+  scale: 1.2;
+} */
 
 .close-button {
   position: absolute;
-  top: -20px;
-  right: 5px;
+  /* top: -30px;
+  right: -10px; */
+  top: -4%;
+  right: 2%;
   background: none;
   border: none;
   cursor: pointer;
   font-size: 14px;
   color: #000; /* 아이콘 색상 */
+  --button-padding: 7px 10px;
 }
 
-#cartPopup > .popup-content > h2 {
+
+#cartPopup > h2 {
   font-size: 18px;
+  margin-bottom: 4%;
   font-weight: 600;
   text-align: center;
 }
 
 #cartItemsList {
-  min-width: 360px;
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  /* min-width: 360px; */
   padding: 20px;
+  padding-top: 0;
   border-radius: 8px;
+  overflow-y: auto;
+  /* background-color: aquamarine; */
+}
+
+#cartItemsList::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+#cartItemsList::-webkit-scrollbar {
+  width: 3px;
+  background-color: #f5f5f5;
+}
+
+#cartItemsList::-webkit-scrollbar-thumb {
+  background-color: #f90;
+  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
 }
 
 #cartItemsList > li {
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-top: 5px;
+  align-items: center;
+  margin-top: 10px;
+  /* text-overflow: clip; */
+}
+
+#cartItemsList > li > p {
+  width: 85%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-height: 1.3;
+  /* background-color: lightcoral; */
 }
 
 #cartItemsList > li > button {
+  /* position: absolute; */
+  width: 45px;
+  max-height: 35px;
+  /* float: right; */
+  /* width: 20%; */
   padding: 5px;
-  margin-top: 5px;
+  margin-top: 0px;
   font-size: 12px;
 }
 
@@ -160,6 +210,11 @@
   margin: 0;
   padding: 0;
   width: 95%;
+}
+
+#cartPopup button:hover {
+  background-color: #ad8e02;
+  transform: scale(1.05);
 }
 
 #cartPopup button:hover {
