--- a/css/material.css
+++ b/css/material.css
@@ -2,7 +2,6 @@
 
 .material-area {
   width: 100%;
-  height:100%;
   max-width: 1300px;
   /* background-color: aqua; */
   margin: 0 auto;
@@ -35,7 +34,7 @@
   align-items: center;
   gap: 10px;
   color: #333;
-  /* font-weight: bold; */
+  font-weight: bold;
   font-size: 17px;
   text-decoration: none;
   opacity: 0.53;
@@ -78,24 +77,22 @@
   width: 100%;
   /* background-color: antiquewhite; */
 }
-.material-icon{
-  margin-bottom: 20px;
-}
+
 /* 각 상품 아이템 */
 .material-goods-card {
   background-color: #fff;
   border: 1px solid #ddd;
   padding: 5px;
-  margin-top: 1% ;
+  margin: 5% 0;
   /* text-align: center; */
   position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.material-goods-card > a > img {
+.material-goods-card a > img {
   width: 100%;
   object-fit: cover;
-height: 230.5px;
+  height: 210px;
 }
 
 .material-goods-card a {
@@ -105,7 +102,7 @@ height: 230.5px;
   /* padding: 5px; */
   text-decoration: none;
   color: #333;
-  font-size: 17px;
+  font-size: 16px;
   text-align: left;
 }
 
@@ -115,7 +112,7 @@ height: 230.5px;
 }
 .materal-textbox > p:first-child,
 .materal-rating > span {
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .price_bold {
@@ -132,7 +129,7 @@ height: 230.5px;
 }
 
 .materal-rating span {
-  /* font-weight: bold; */
+  font-weight: bold;
 }
 
 .materal-rating > img {
@@ -195,29 +192,26 @@ height: 230.5px;
 
 .show-more {
   text-align: center;
-  margin: 0 auto;
-
+  margin: 20px 0;
 }
 
 #showMoreButton {
-  padding: 5px 10px;
-  font-size: 12px;
+  padding: 10px 20px;
+  font-size: 16px;
   cursor: pointer;
   display: none;
-  border-radius: 20px;
 }
 
 .m_title {
   font-size: 14px;
-  padding: 0, 0  8px 0;
-  /* font-weight: 800; */
+  font-weight: 800;
 }
 
 /* 장바구니 아이콘 부분 */
 .add-to-cart1 {
   position: absolute;
-  bottom: 27%; /* 필요에 따라 조정 */
-  right: 2%; /* 필요에 따라 조정 */
+  bottom: 42%; /* 필요에 따라 조정 */
+  right: 5%; /* 필요에 따라 조정 */
   z-index: 10; /* 이미지 위에 표시되도록 */
 }
 
@@ -226,76 +220,48 @@ height: 230.5px;
 /* 1024px 이하 화면을 위한 미디어 쿼리 */
 @media (max-width: 1024px) {
   .material-goods-card {
-    grid-template-columns: repeat(3, 1fr); /* 1024px 이하에서는 3열 */
-    flex: 1 1 calc(50% - 20px); /* 2개의 아이템 표시 */
+    flex: 1 1 calc(50% - 20px); /* 3개의 아이템 표시 */
   }
-  .material-goods-card a {
-    font-size: 19px;
-
-  }
-  .material-goods-card > a > img {
-    height: 300px;
-  }
-  .add-to-cart1{
-    bottom: 22%; 
+  .material-goods-card a > img {
+    height: 433px;
   }
 }
 
-
-/* 768px 이하 화면을 위한 미디어 쿼리 */
-@media (max-width: 768px) {
+/* 880px 이하 화면을 위한 미디어 쿼리 */
+@media (max-width: 880px) {
   .material-goods-card {
     flex: 1 1 calc(50% - 20px); /* 2개의 아이템 표시 */
   }
+}
+
+/* 768px 이하 화면을 위한 미디어 쿼리 */
+@media (max-width: 768px) {
   .materal-textbox {
     text-align: left;
   }
-  /* .material-goods-card a > img {
+  .material-goods-card a > img {
     max-height: 328.61px;
-  } */
-
-  .b1920px {
-    display: none;
-  }
-  .b768px {
-    display: block;
-  }
-  .slide-area {
-    max-width: 450px;
-  }
-  .b360px {
-    display: none;
   }
 
-}
-@media (max-width: 590px) {
-  .material-goods-card a {
-    font-size: 16px;
-  }
-  .material-goods-card > a > img {
-    height: 210px;
-  }
-  .add-to-cart1{
-    bottom: 26%; 
-  }
+
+
 }
 
 /* 480px 이하 화면을 위한 미디어 쿼리 */
-@media (max-width: 485px) {
+@media (max-width: 480px) {
   .swiper-slide img {
     width: 60%; /* 아이콘의 너비를 화면의 40%로 설정 */
   }
 
-  .material-goods-card a {
-    font-size: 19px;
+  .material-goods-card a > img {
+    max-height: 350px;
   }
-  .material-goods-card {
-    margin: 0 0 10px ;
-  }
+
   .material-goods {
     padding: 0 10%;
   }
   .materal-textbox p {
+    font-size: 14px;
     margin-bottom: 10px;
   }
 
@@ -314,12 +280,6 @@ height: 230.5px;
     color: #333;
     background-color: #fdd835;
   }
-  .material-goods{
-    padding: 10px;
-  }
-  .add-to-cart1{
-    bottom: 28%; 
-  }
 }
 
 /* 360px 이하 화면을 위한 미디어 쿼리 */
@@ -330,9 +290,9 @@ height: 230.5px;
     gap: 10px; /* 그리드 아이템 간의 간격 */
   }
 
-  /* .material-goods-card a > img {
+  .material-goods-card a > img {
     max-height: 250px;
-  } */
+  }
 
   .material-goods-card {
     flex: unset; /* Flex 속성 제거 */
@@ -341,10 +301,122 @@ height: 230.5px;
   .more-link_m {
     display: block;
   }
+  .add-to-cart1 {
+    bottom: 35%; /* 상대적으로 위치 조정 */
+    right: 5%; /* 오른쪽 여백 조정 */
+  }
+}
+
+/* 소재배너 */
+.banner {
+  border: 1px dashed #ccc;
+  display: block;
+  width: 100%;
+  /* height: auto; */
+  margin-top: 70px;
+  /* max-width: 1100px; */
+  /* background-color: aqua; */
+  z-index: 9999;
+}
+
+.banner-slide-area {
+  display: block;
+  width: 100%;
+  max-width: 1150px;
+  margin: 0 auto;
+}
+
+.swiper-Banner .swiper-slide {
+  opacity: 0; /* 기본 오파시티 값 */
+  transition: all 1.8s; /* 오파시티 전환 효과 */
+}
+
+.swiper-Banner .swiper-slide-active {
+  opacity: 1; /* 활성 슬라이드에만 완전한 오파시티 적용 */
+}
+
+.banne-slide > a {
+  display: block;
+  width: 100%;
+  /* background-color: ; */
+}
+.banne-slide > a > img {
+  width: 100%;
+  /* height: 500px; */
+  /* object-fit: contain; */
+}
+.b768px {
+  display: none;
+}
+
+.b360px {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+  .add-to-cart1 {
+    bottom: 26%; /* 상대적으로 위치 조정 */
+    right: 4%; /* 오른쪽 여백 조정 */
+  }
+
+  .add-icon {
+    width: 35px; /* 아이콘 크기 조정 */
+    height: 35px;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .b1920px {
+    display: none;
+  }
+  .b768px {
+    display: block;
+  }
+  .slide-area {
+    max-width: 450px;
+  }
+  .b360px {
+    display: none;
+  }
+
+  .add-to-cart1 {
+    bottom: 31%; /* 상대적으로 위치 조정 */
+    right: 4%; /* 오른쪽 여백 조정 */
+  }
 
 }
-@media (max-width: 385px) {
-  .material-goods{
-    padding: 10px;
+
+
+@media (max-width: 480px) {
+  .add-to-cart1 {
+    bottom: 30%; /* 상대적으로 위치 조정 */
+    right: 5%; /* 오른쪽 여백 조정 */
   }
+
+}
+
+@media (min-width: 361px) and (max-width: 479px) {
+  .add-to-cart1 {
+    bottom: 33%; /* 상대적으로 위치 조정 */
+    right: 5%; /* 오른쪽 여백 조정 */
+  }
+
+  .add-icon {
+    width: 30px; /* 아이콘 크기 조정 */
+    height: 30px;
+  }
+
+  .slide-area {
+    max-width: 400px; /* 슬라이드 영역 최대 너비 조정 */
+  }
+}
+
+
+@media (max-width: 360px) {
+  .add-to-cart1 {
+    bottom: 37%; /* 상대적으로 위치 조정 */
+    right: 5%; /* 오른쪽 여백 조정 */
+  }
+
 }
