--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -36,7 +36,7 @@
 .dp-sub-images > img {
   width: calc(25%);
   cursor: pointer;
-  padding-right: 10px;
+padding: 0 5px;
 }
 /* 상품정보 top */
 .detail-info {
@@ -143,15 +143,30 @@
   background-color: #ffd233;
   border: 1px solid #8c6d00;
 }
+/* 하단부분 */
 /* 라인 */
 .detail-tab-content {
   border-top: 2px solid #ddd;
   display: flex;
   align-items: center;
   width: 100%;
-
+position: relative;
 }
 
+.detail-tab-description-bline{
+  position: absolute;
+  top: -2px;
+  border-top: 2px solid #000;
+  width: 50%;
+}
+.detail-tab-brand-bline{
+  position: absolute;
+  top: -2px;
+  border-top: 2px solid #000;
+  width: 50%;
+  right: 0;
+
+}
 .detail-tab-container {
   display: flex;
   flex-direction: row;
@@ -170,13 +185,14 @@
 }
 
 /* 상품소개/브랜드 */
+
 .detail-card {
   width: 100%;
   margin: 0 auto;
 
 }
 .detail-tab-content {
-  display: none;
+  display: block;
 }
 
 /* 상품소개/브랜드 */
@@ -199,5 +215,16 @@
   width: 80%;
 
 }
-
-/* 더 보기 */
+#description-tab{
+  font-weight: 800;
+}
+/* 반응형 */
+@media (max-width: 1100px) {
+  .detail-info-line{
+    padding:15px ;}
+}
+@media (max-width: 1024) {
+  .detail-info-top-coupon {
+    margin: 15px , 0;
+}
+}
