--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -223,8 +223,145 @@ position: relative;
   .detail-info-line{
     padding:15px ;}
 }
-@media (max-width: 1024) {
+@media (max-width: 1170px){
+  .detail-top {
+    margin-top: 15%;
+  }
+}
+@media (max-width: 1014px) {
   .detail-info-top-coupon {
-    margin: 15px , 0;
+    width: 100%;
+    margin: 15px 0;
+  }
+  .detail-info-top h1 {
+    font-size: 35px;
+    margin: 15px 0;
+  }
+  .detail-info-top-dprice {
+    font-size: 25px;
+    font-weight: 500;
+  }
+  .detail-info-top-oprice {
+    font-size: 25px;
+    font-weight: 400;
+  }
+  .detail-info-top-dprice > span {
+    font-size: 20px;
+  }
+  .detail-info-top-oprice > span {
+    font-size: 20px;
+    
+  }
+  .detail-info-top-star img {
+    width: 100px;
+  }
+  .detail-info-top-star span {
+    font-size: 13px;
+  }
+  .detail-info-line > p {
+    width: 30%;
+  }
+  .detail-info-line > span {
+    width: 70%;}
+  }
+  @media (max-width: 960px) {
+    .detail-btn > a > button {
+      width: 98%;
+      font-size: 20px;
+      padding: 10px;
+      font-weight: 600;
+
+    }
+
+  }
+  @media (max-width: 860px){
+    .detail-info-line > p {
+      font-size: 16px;
+      width: 30%;
+    }
+    .detail-info-line > span {
+      line-height: 1.2;
+      font-size: 14px;
+    }
+  }
+  @media (max-width: 760px){
+    .detail-info-top-coupon {
+      width: 100%;
+      margin: 10px 0;
+    }
+    .detail-info-top h1 {
+      font-size: 25px;
+      margin: 10px 0;
+    }
+    .detail-info-top-dprice {
+      font-size: 20px;
+      font-weight: 500;
+    }
+    .detail-info-top-oprice {
+      font-size: 20px;
+      font-weight: 400;
+    }
+    .detail-info-top-oprice > span {
+      font-size: 16px;
+      
+    }
+    .detail-info-top-dprice > span {
+      font-size: 16px;
+    }
+    .detail-info-top-star img {
+      width: 100px;
+    }
+    .detail-info-line > p {
+      width: 30%;
+    }
+    .detail-info-line > span {
+      width: 70%;}
+      .detail-info-line > p {
+        font-size: 15px;
+  }
+  .detail-info-line{
+    padding:10px ;}
+  
+    .detail-btn > a > button {
+      width: 98%;
+      font-size: 15px;
+      padding: 5px;
+      font-weight: 700;
+    }
+
 }
-}
+    @media (max-width: 690px){
+      .detail-top{
+        flex-direction: column;
+        align-items: center
+    }
+    .detail-info {
+      width: 100%;
+      margin: 0px;
+    }
+    .detail-product-img {
+      width: 100%;
+    }
+    .detail-info-top-coupon {
+      margin-bottom: 10px;
+    }
+  }
+  @media (max-width: 690px){
+    .detail-top {
+      margin-top: 20%;}
+      .detail-tab-button{
+        font-size: 14px;
+        padding: 5px;
+      }
+      .detail-image-brand {
+        padding-top: 9%;
+        padding-left: 9%;
+    }
+      .detail-image-brand img {
+        width: 90%;
+        padding: 0px;
+      }
+      .detail-image-container img {
+        padding-top: 10%;
+      }
+  }
