--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -134,6 +134,7 @@ padding: 0 5px;
   padding: 15px;
   font-weight: 600;
   margin: 0 auto;
+  text-decoration: none;
 }
 .detail-btn-cart {
   background-color: #d9d9d9;
@@ -364,4 +365,12 @@ position: relative;
       .detail-image-container img {
         padding-top: 10%;
       }
+  }
+  @media (max-width: 470px){
+    .detail-top {
+      margin-top: 25%;}
+  }
+  @media (max-width: 380px){
+    .detail-top {
+      margin-top: 30%;}
   }
