--- a/css/material.css
+++ b/css/material.css
@@ -284,7 +284,7 @@
     display: block;
     border: none;
     color: #333;
-    background-color: #d8d8d5;
+    background-color: #fdd835;
     font-size: 11px;
     margin-top:0px ;
   }
@@ -315,51 +315,6 @@
   }
 }
 
-/* 소재배너 */
-.banner {
-  border: 1px dashed #ccc;
-  display: block;
-  width: 100%;
-  /* height: auto; */
-  margin-top: 70px;
-  /* max-width: 1100px; */
-  /* background-color: aqua; */
-  z-index: 9999;
-}
-
-.banner-slide-area {
-  display: block;
-  width: 100%;
-  max-width: 1150px;
-  margin: 0 auto;
-}
-
-.swiper-Banner .swiper-slide {
-  opacity: 0; /* 기본 오파시티 값 */
-  transition: all 1.8s; /* 오파시티 전환 효과 */
-}
-
-.swiper-Banner .swiper-slide-active {
-  opacity: 1; /* 활성 슬라이드에만 완전한 오파시티 적용 */
-}
-
-.banne-slide > a {
-  display: block;
-  width: 100%;
-  /* background-color: ; */
-}
-.banne-slide > a > img {
-  width: 100%;
-  /* height: 500px; */
-  /* object-fit: contain; */
-}
-.b768px {
-  display: none;
-}
-
-.b360px {
-  display: none;
-}
 
 @media (max-width: 1024px) {
   .add-to-cart1 {
