--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -261,7 +261,7 @@
 @media (max-width: 485px) {
   .product-grid {
     grid-template-columns: 2fr; 
-    padding: 10px 40px;
+    padding: 10px 0;
   }
   .section-title {
     font-size: 20px; /* 섹션 타이틀 크기 조정 */
