--- a/css/material.css
+++ b/css/material.css
@@ -64,7 +64,7 @@
 }
 
 .material-goods {
-  display: grid;
+  /* display: grid; */
   grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
   gap: 10px;
   width: 100%;
@@ -220,23 +220,25 @@
 }
 
 
-
 /* 1024px 이하 화면을 위한 미디어 쿼리 */
 @media (max-width: 1024px) {
   .material-goods-card {
-    flex: 1 1 calc(50% - 20px); /* 3개의 아이템 표시 */
+    flex: 1 1 calc(50% - 20px); /* 2개의 아이템 표시 */
   }
+
   .material-goods-card a > img {
     height: 433px;
   }
-    .add-to-cart1 {
-      bottom: 15%; /* 상대적으로 위치 조정 */
-      right: 4%; /* 오른쪽 여백 조정 */
-    } 
-    .add-icon {
-      width: 35px; /* 아이콘 크기 조정 */
-      height: 35px;
-    }  
+
+  .add-to-cart1 {
+    bottom: 14%; /* 상대적으로 위치 조정 */
+    right: 4%; /* 오른쪽 여백 조정 */
+  }
+
+  .add-icon {
+    width: 35px; /* 아이콘 크기 조정 */
+    height: 35px;
+  }
 }
 
 /* 880px 이하 화면을 위한 미디어 쿼리 */
@@ -251,27 +253,31 @@
   .materal-textbox {
     text-align: left;
   }
+
   .material-goods-card a > img {
     max-height: 328.61px;
   }
-    .b1920px {
-      display: none;
-    }
-    .b768px {
-      display: block;
-    }
-    .slide-area {
-      max-width: 450px;
-    }
-    .b360px {
-      display: none;
-    }
-  
-    .add-to-cart1 {
-      bottom: 20%; /* 상대적으로 위치 조정 */
-      right: 4%; /* 오른쪽 여백 조정 */
-    }
 
+  .b1920px {
+    display: none;
+  }
+
+  .b768px {
+    display: block;
+  }
+
+  .slide-area {
+    max-width: 450px;
+  }
+
+  .b360px {
+    display: none;
+  }
+
+  .add-to-cart1 {
+    bottom: 17%; /* 상대적으로 위치 조정 */
+    right: 4%; /* 오른쪽 여백 조정 */
+  }
 }
 
 /* 480px 이하 화면을 위한 미디어 쿼리 */
@@ -287,6 +293,7 @@
   .material-goods {
     padding: 0;
   }
+
   .materal-textbox p {
     font-size: 15px;
     margin-bottom: 10px;
@@ -307,20 +314,20 @@
     color: #333;
     background-color: #fdd835;
     font-size: 11px;
-    margin-top:0px ;
-  }
-    .add-to-cart1 {
-      bottom: 20%; /* 상대적으로 위치 조정 */
-      right: 5%; /* 오른쪽 여백 조정 */
-    }
-    .slide-area {
-      max-width: 400px; 
-    }
+    margin-top: 0px;
   }
 
+  .add-to-cart1 {
+    right: 5%; /* 오른쪽 여백 조정 */
+  }
+
+  .slide-area {
+    max-width: 400px; 
+  }
+}
 
 /* 360px 이하 화면을 위한 미디어 쿼리 */
-@media (max-width: 385px) {
+@media (max-width: 360px) {
   .material-goods {
     display: grid; /* 그리드 레이아웃으로 전환 */
     grid-template-columns: repeat(1, 1fr); /* 1열 배치 */
@@ -335,57 +342,20 @@
     flex: unset; /* Flex 속성 제거 */
     width: 100%; /* 카드가 전체 너비를 차지하도록 설정 */
   }
+
   .more-link_m {
     display: block;
   }
 
-
-@media (max-width: 1024px) {
   .add-to-cart1 {
-    bottom: 26%; /* 상대적으로 위치 조정 */
-    right: 4%; /* 오른쪽 여백 조정 */
-  }
-
-  .add-icon {
-    width: 35px; /* 아이콘 크기 조정 */
-    height: 35px;
+    bottom: 24%; /* 상대적으로 위치 조정 */
+    right: 2%; /* 오른쪽 여백 조정 */
   }
 }
 
-
-@media (max-width: 768px) {
-  .b1920px {
-    display: none;
-  }
-  .b768px {
-    display: block;
-  }
-  .slide-area {
-    max-width: 450px;
-  }
-  .b360px {
-    display: none;
-  }
-
-  .add-to-cart1 {
-    bottom: 31%; /* 상대적으로 위치 조정 */
-    right: 4%; /* 오른쪽 여백 조정 */
-  }
-
-}
-
-
-@media (max-width: 480px) {
-  .add-to-cart1 {
-    bottom: 30%; /* 상대적으로 위치 조정 */
-    right: 5%; /* 오른쪽 여백 조정 */
-  }
-
-}
-
+/* 361px ~ 479px 화면을 위한 미디어 쿼리 */
 @media (min-width: 361px) and (max-width: 479px) {
   .add-to-cart1 {
-    bottom: 33%; /* 상대적으로 위치 조정 */
     right: 5%; /* 오른쪽 여백 조정 */
   }
 
@@ -397,21 +367,5 @@
   .slide-area {
     max-width: 400px; /* 슬라이드 영역 최대 너비 조정 */
   }
-}
-
-
-@media (max-width: 360px) {
-
-  .add-to-cart1 {
-    bottom: 37%; /* 상대적으로 위치 조정 */
-    right: 5%; /* 오른쪽 여백 조정 */
-  }
-
-=======
-  .material-goods-card a > img {
-    max-height: 250px;
-  }
-
-
 }
 
