--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -126,7 +126,7 @@
 }
 .detail-btn > a {
   width: 100%;
-  text-decoration: none;
+  color: #333;
 }
 .detail-btn > a > button {
   width: 98%;
@@ -134,7 +134,6 @@
   padding: 15px;
   font-weight: 600;
   margin: 0 auto;
-  text-decoration: none;
 }
 .detail-btn-cart {
   background-color: #d9d9d9;
