디테일 페이지 버튼 수정/리뷰 텍스트 수정

--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -127,21 +127,27 @@
 .detail-btn > a {
   width: 100%;
   color: #333;
+  text-decoration: none;
 }
-.detail-btn > a > button {
+.detail-btn-cart {
+  background-color: #d9d9d9;
+  border: 1px solid #333;
   width: 98%;
   font-size: 20px;
   padding: 15px;
   font-weight: 600;
   margin: 0 auto;
-}
-.detail-btn-cart {
-  background-color: #d9d9d9;
-  border: 1px solid #333;
+  text-align: center;
 }
 .detail-btn-buy {
   background-color: #ffd233;
   border: 1px solid #8c6d00;
+  width: 98%;
+  font-size: 20px;
+  padding: 15px;
+  font-weight: 600;
+  margin: 0 auto;
+  text-align: center;
 }
 /* 하단부분 */
 /* 라인 */
@@ -171,9 +177,11 @@
   flex-direction: row;
   justify-content: space-around;
 }
-
+.detail-tab-container p{
+  font-size: 20px;
+}
 .detail-tab-container.active {
-  display: flex;
+  display: flex;c
 }
 .detail-tab-button {
   font-size: 15px;
