--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -127,8 +127,10 @@
 .detail-btn > a {
   width: 100%;
   color: #333;
+  text-decoration: none;
+  text-align: center;
 }
-.detail-btn > a > button {
+.detail-btn > a > p {
   width: 98%;
   font-size: 20px;
   padding: 15px;
@@ -262,7 +264,7 @@
   }
 }
 @media (max-width: 960px) {
-  .detail-btn > a > button {
+  .detail-btn > a > p {
     width: 98%;
     font-size: 20px;
     padding: 10px;
@@ -318,7 +320,7 @@
     padding: 10px;
   }
 
-  .detail-btn > a > button {
+  .detail-btn > a > p {
     width: 98%;
     font-size: 15px;
     padding: 5px;
